# defuse-monitor

./: .coverage  .gitignore  LICENSE  Makefile  README.md  defuse.example.toml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
src/defuse_monitor/: __init__.py  __main__.py
src/defuse_monitor/alerts/: __init__.py  dispatcher.py
src/defuse_monitor/core/: __init__.py  config.py  deduplicator.py  dispatcher.py  events.py
src/defuse_monitor/defuse/: __init__.py  handler.py
src/defuse_monitor/monitors/: __init__.py  accounting.py  auth_log.py
systemd/: defuse-monitor.service
tests/: __init__.py  test_accounting.py  test_alert_dispatcher.py  test_config.py  test_deduplicator.py  test_defuse.py  test_main.py  test_monitors.py
tests/core/: test_config.py
tests/monitors/: test_auth_log.py
