[project]
name = "defuse-monitor"
version = "0.1.0"
description = "Real-time Linux login monitoring"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "pydantic>=2.11.9",
    "toml>=0.10.2",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
    "types-toml>=0.10.8.20240310",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/defuse_monitor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
venvPath = "."
venv = ".venv"
